<resources>
    <string name="app_name">Positioning</string>
    <string name="action_settings">Settings</string>
    <string name="vanadium_identity">Vanadium Identity</string>
    <!-- Main Activity -->
    <string name="record_my_location">Record my GPS location</string>
    <string name="find_and_record_devices">Find and record devices</string>
    <string name="advertise">Advertise</string>
    <string name="stop_advertising">Stop Advertising</string>
    <string name="ble_not_supported">BLE is not supported on this device.</string>
    <!-- Finding Devices with Bluetooth -->
    <string name="positioning_with_bluetooth">Positioning with Bluetooth</string>
    <string name="finding_devices">Finding devices…</string>
    <string name="no_devices_found">No devices found</string>
    <string name="discovery_finished">Discovery finished</string>
    <string name="recorded_devices">Recorded Devices</string>
    <string name="find_devices">Find devices</string>
    <!-- Ultrasound -->
    <string name="title_activity_ultrasound">UltrasoundActivity</string>
    <string name="ultrasound">Ultrasound</string>
    <string name="send_ultrasound">Send ultrasound</string>
    <string name="start_receiving_ultrasound">Start receiving ultrasound</string>
    <string name="stop_receiving_ultrasound">Stop receiving ultrasound</string>
    <!-- Advertising and Connecting-->
    <string name="start_advertising">Start Advertising</string>
    <string name="start_scanning">Start Scanning </string>
    <string name="stop_scanning">Stop Scanning </string>
    <string name="no_advertising_support">Advertising not supported</string>
    <string name="ble">Bluetooth low energy</string>
    <string name="title_activity_ble">BleActivity</string>
    <string name="title_activity_tof_protocol">TofProtocolActivity</string>
    <!-- ToF protocol -->>
    <string name="tof_protocol">Tof Protocol</string>
    <string name="start_tof_initiator">Send initial message</string>
    <string name="stop_tof_initiator">Interrupt initiated protocol</string>
    <string name="start_tof_responder">Start listening for messages</string>
    <string name="stop_tof_responder">Stop listening for messages</string>
    <string name="responder_not_alive">Responder is not alive. Turn it on.</string>
    <string name="busy_try_again">Busy, try again!</string>
    <string name="responder_stopped">Responder stopped.</string>

</resources>
