<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.v.positioning.tofprotocol.TofProtocolActivity">

    <Button
        android:id="@+id/tof_initiator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartTofInitiator"
        android:text="@string/start_tof_initiator" />

    <Button
        android:id="@+id/tof_interrupt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onInterruptInitiator"
        android:text="@string/stop_tof_initiator" />

    <Button
        android:id="@+id/tof_responding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onToggleTofResponding"
        android:text="@string/start_tof_responder" />

</LinearLayout>
